versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Author.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalAuthor
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function AuthorDefaultConst() &
      bind(C, name='AuthorDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function AuthorDefaultConst

!! Create, default
function AuthorDefault() &
      bind(C, name='AuthorDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function AuthorDefault

!! Create, general, const
function AuthorCreateConst( &
   name, &
   nameSize &
) &
      bind(C, name='AuthorCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: nameSize
   character(c_char), intent(in) :: name(nameSize)
   type(c_ptr) :: handle
end function AuthorCreateConst

!! Create, general
function AuthorCreate( &
   name, &
   nameSize &
) &
      bind(C, name='AuthorCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: nameSize
   character(c_char), intent(in) :: name(nameSize)
   type(c_ptr) :: handle
end function AuthorCreate

!! Assign
subroutine AuthorAssign(handleLHS, handleRHS) &
      bind(C, name='AuthorAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine AuthorAssign

!! Delete
subroutine AuthorDelete(handle) &
      bind(C, name='AuthorDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine AuthorDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function AuthorRead(handle, filename, filenameSize) &
      bind(C, name='AuthorRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function AuthorRead

!! Write to file
function AuthorWrite(handle, filename, filenameSize) &
      bind(C, name='AuthorWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function AuthorWrite

!! Print to standard output, in our prettyprinting format
function AuthorPrint(handle) &
      bind(C, name='AuthorPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function AuthorPrint

!! Print to standard output, as XML
function AuthorPrintXML(handle) &
      bind(C, name='AuthorPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function AuthorPrintXML

!! Print to standard output, as JSON
function AuthorPrintJSON(handle) &
      bind(C, name='AuthorPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function AuthorPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: name
!! -----------------------------------------------------------------------------

!! Has
function AuthorNameHas(handle) &
      bind(C, name='AuthorNameHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function AuthorNameHas

!! Get
function AuthorNameGet(handle) &
      bind(C, name='AuthorNameGet') &
      result(name)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: name
end function AuthorNameGet

!! Set
subroutine AuthorNameSet(handle, name, nameSize) &
      bind(C, name='AuthorNameSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: nameSize
   character(c_char), intent(in) :: name(nameSize)
end subroutine AuthorNameSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalAuthor
